--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "doctoc": "^1.4.0",
     "husky": "^4.2.5",
     "lerna": "^3.22.1",
-    "lint-staged": "^10.2.11"
+    "lint-staged": "^10.2.11",
+    "ts-loader": "^7.0.5",
+    "typescript": "^3.9.6",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
   },
   "config": {
     "commitizen": {
