chore: fix Hooks + mulitiple instances of React
affects: @dragon-ball/goku

Fix Hooks + mulitiple instances of React
add webpack.dev.js
replace unique-classnames with
classnames

--- a/packages/goku/tsconfig.json
+++ b/packages/goku/tsconfig.json
@@ -17,7 +17,7 @@
     "noUnusedParameters": true,
     "removeComments": true,
     "experimentalDecorators": true,
-    "allowSyntheticDefaultImports": false,
+    "allowSyntheticDefaultImports": true,
     "allowUnreachableCode": false,
     "allowUnusedLabels": false,
     "strict": false,
