--- a/packages/goku/package.json
+++ b/packages/goku/package.json
@@ -25,12 +25,14 @@
     "url": "git+https://github.com/dragon-ball-p/dragon-ball.git"
   },
   "scripts": {
+    "dev": "webpack --config webpack.dev.js",
     "build": "webpack --config webpack.config.js"
   },
   "bugs": {
     "url": "https://github.com/dragon-ball-p/dragon-ball/issues"
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.10",
     "@types/react": "^16.9.41",
     "@types/react-dom": "^16.9.8"
   },
@@ -40,7 +42,7 @@
     "react-dom": "^16.13.1"
   },
   "dependencies": {
-    "omit.js": "^1.0.2",
-    "unique-classnames": "^1.0.9"
+    "classnames": "^2.2.6",
+    "omit.js": "^1.0.2"
   }
 }
