--- a/package.json
+++ b/package.json
@@ -6,25 +6,42 @@
   ],
   "scripts": {
     "changelog": "conventional-changelog -p angular -i ChangeLog.md -s -r 0",
-    "commit": "git-cz"
+    "lint": "yarn lint:chichi && yarn lint:goku",
+    "lint:chichi": "eslint packages/chichi/src --ext .tsx",
+    "lint:goku": "eslint packages/goku/src --ext .tsx",
+    "commit": "git-cz",
+    "build": "learn run --stream --sort build"
   },
   "devDependencies": {
+    "@babel/core": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
     "@commitlint/config-conventional": "^9.0.1",
+    "@types/react": "^16.9.41",
+    "@types/react-dom": "^16.9.8",
+    "@typescript-eslint/eslint-plugin": "^3.6.0",
+    "@typescript-eslint/parser": "^3.6.0",
     "commitlint": "^9.0.1",
     "conventional-changelog": "^3.1.21",
-    "cz-conventional-changelog": "^3.2.0",
+    "cz-lerna-changelog": "^2.0.3",
     "doctoc": "^1.4.0",
+    "eslint": "^7.4.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react-hooks": "^4.0.7",
     "husky": "^4.2.5",
     "lerna": "^3.22.1",
     "lint-staged": "^10.2.11",
+    "prettier": "^2.0.5",
     "ts-loader": "^7.0.5",
     "typescript": "^3.9.6",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "webpack-merge": "^5.0.9"
   },
   "config": {
     "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
+      "path": "./node_modules/cz-lerna-changelog"
     }
   },
   "husky": {
@@ -48,5 +65,11 @@
   "bugs": {
     "url": "https://github.com/dragon-ball-p/dragon-ball/issues"
   },
-  "homepage": "https://github.com/dragon-ball-p/dragon-ball#readme"
+  "homepage": "https://github.com/dragon-ball-p/dragon-ball#readme",
+  "dependencies": {
+    "bulma": "^0.9.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0"
+  }
 }
