chore: update types of package.json
affects: @dragon-ball/power-pole

--- a/packages/power-pole/package.json
+++ b/packages/power-pole/package.json
@@ -10,6 +10,7 @@
   "homepage": "https://github.com/dragon-ball-p/dragon-ball/tree/master/packages/power-pole#readme",
   "license": "MIT",
   "main": "lib/power-pole.js",
+  "types": "types",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
