--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "^7.4.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.7",
     "husky": "^4.2.5",
     "lerna": "^3.22.1",
