--- a/packages/goku/package.json
+++ b/packages/goku/package.json
@@ -10,6 +10,7 @@
   "homepage": "https://github.com/dragon-ball-p/dragon-ball/tree/master/packages/goku#readme",
   "license": "MIT",
   "main": "lib/goku.js",
+  "typings": "types/index.d.ts",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
