--- a/packages/goku/package.json
+++ b/packages/goku/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dragon-ball/goku",
-  "version": "0.0.0",
+  "version": "0.0.1-alpha.0",
   "description": "dragon ball react components",
   "author": {
     "name": "poplark",
