--- a/packages/power-pole/package.json
+++ b/packages/power-pole/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dragon-ball/power-pole",
-  "version": "0.0.0",
+  "version": "0.0.1-alpha.0",
   "description": "dragon-ball utils",
   "author": {
     "name": "poplark",
