--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "lint-staged": "^10.2.11",
     "prettier": "^2.0.5",
     "ts-loader": "^7.0.5",
-    "typescript": "^3.9.6",
+    "typescript": "^4.0.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-merge": "^5.0.9"
@@ -67,10 +67,5 @@
     "url": "https://github.com/dragon-ball-p/dragon-ball/issues"
   },
   "homepage": "https://github.com/dragon-ball-p/dragon-ball#readme",
-  "dependencies": {
-    "bulma": "^0.9.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0"
-  }
+  "dependencies": {}
 }
