--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@typescript-eslint/parser": "^3.6.0",
     "commitlint": "^9.0.1",
     "conventional-changelog": "^3.1.21",
+    "conventional-changelog-cli": "^2.2.2",
     "cz-lerna-changelog": "^2.0.3",
     "doctoc": "^1.4.0",
     "eslint": "^7.4.0",
