fix: fix Notification
affects: @dragon-ball/chichi, @dragon-ball/goku, @dragon-ball/power-pole

--- a/packages/power-pole/package.json
+++ b/packages/power-pole/package.json
@@ -30,5 +30,6 @@
   },
   "bugs": {
     "url": "https://github.com/dragon-ball-p/dragon-ball/issues"
-  }
+  },
+  "gitHead": "7d4ee10185c166d4cdd3717cf5b813c1f3967263"
 }
