--- a/packages/goku/package.json
+++ b/packages/goku/package.json
@@ -27,6 +27,7 @@
     "url": "git+https://github.com/dragon-ball-p/dragon-ball.git"
   },
   "scripts": {
+    "test": "jest --watch",
     "start": "webpack --progress --display-chunks -p --watch --mode development",
     "build": "webpack --progress --display-chunks -p --config webpack.config.js"
   },
@@ -34,8 +35,13 @@
     "url": "https://github.com/dragon-ball-p/dragon-ball/issues"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^12.0.0",
+    "jest": "^28.1.1",
+    "jest-environment-jsdom": "^28.1.1",
     "node-sass": "^7.0.1",
-    "sass-loader": "^13.0.0"
+    "sass-loader": "^13.0.0",
+    "ts-jest": "^28.0.5"
   },
   "peerDependencies": {
     "bulma": "^0.9.0",
