chore: 修复 tsx 导入 react 的问题；修改 jest 配置
affects: @dragon-ball/goku

使用 jest setup 文件来全局导入 @testing-library/jest-dom 库

--- a/packages/goku/tsconfig.json
+++ b/packages/goku/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "es5",
     "module": "es6",
-    "rootDir": "src",
+    "rootDirs": ["src", "./"],
     "outDir": "types",
     "newLine": "LF",
     "jsx": "react",
