--- a/package.json
+++ b/package.json
@@ -10,18 +10,29 @@
     "lint:chichi": "eslint packages/chichi/src --ext .tsx",
     "lint:goku": "eslint packages/goku/src --ext .tsx",
     "commit": "git-cz",
-    "build": "lerna run --stream --sort build"
+    "build": "lerna run --stream --sort build",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
     "@commitlint/config-conventional": "^9.0.1",
+    "@storybook/addon-actions": "^6.5.9",
+    "@storybook/addon-essentials": "^6.5.9",
+    "@storybook/addon-interactions": "^6.5.9",
+    "@storybook/addon-links": "^6.5.9",
+    "@storybook/builder-webpack4": "^6.5.9",
+    "@storybook/manager-webpack4": "^6.5.9",
+    "@storybook/react": "^6.5.9",
+    "@storybook/testing-library": "^0.0.13",
     "@types/classnames": "^2.2.10",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^3.6.0",
     "@typescript-eslint/parser": "^3.6.0",
+    "babel-loader": "^8.2.5",
     "commitlint": "^9.0.1",
     "conventional-changelog": "^3.1.21",
     "conventional-changelog-cli": "^2.2.2",
@@ -32,6 +43,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.7",
+    "eslint-plugin-storybook": "^0.5.12",
     "husky": "^4.2.5",
     "lerna": "^3.22.1",
     "lint-staged": "^10.2.11",
