--- a/package.json
+++ b/package.json
@@ -15,9 +15,6 @@
     "build-storybook": "build-storybook"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.4",
-    "@babel/preset-env": "^7.10.4",
-    "@babel/preset-react": "^7.10.4",
     "@commitlint/config-conventional": "^9.0.1",
     "@storybook/addon-actions": "^6.5.9",
     "@storybook/addon-essentials": "^6.5.9",
@@ -28,11 +25,10 @@
     "@storybook/react": "^6.5.9",
     "@storybook/testing-library": "^0.0.13",
     "@types/classnames": "^2.2.10",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
-    "babel-loader": "^8.2.5",
     "commitlint": "^9.0.1",
     "conventional-changelog": "^3.1.21",
     "conventional-changelog-cli": "^2.2.2",
@@ -48,8 +44,10 @@
     "lerna": "^5.4.0",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
-    "ts-loader": "^7.0.5",
-    "typescript": "^4.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "ts-loader": "^9.3.1",
+    "typescript": "^4.7.2",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-merge": "^5.0.9"
