--- a/packages/goku/package.json
+++ b/packages/goku/package.json
@@ -28,8 +28,8 @@
   },
   "scripts": {
     "test": "jest --watch",
-    "start": "webpack --progress --display-chunks -p --watch --mode development",
-    "build": "webpack --progress --display-chunks -p --config webpack.config.js"
+    "start": "webpack --progress --watch --mode development",
+    "build": "webpack --progress --config webpack.config.js"
   },
   "bugs": {
     "url": "https://github.com/dragon-ball-p/dragon-ball/issues"
@@ -45,8 +45,8 @@
   },
   "peerDependencies": {
     "bulma": "^0.9.0",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0"
   },
   "dependencies": {
     "classnames": "^2.2.6",
