--- a/packages/chichi/package.json
+++ b/packages/chichi/package.json
@@ -26,26 +26,27 @@
   },
   "scripts": {
     "start": "webpack-dev-server --config webpack.dev.js",
-    "build": "webpack --progress --display-chunks -p --config webpack.config.js"
+    "build": "webpack --progress --config webpack.config.js"
   },
   "bugs": {
     "url": "https://github.com/dragon-ball-p/dragon-ball/issues"
   },
   "devDependencies": {
-    "autoprefixer": "^9.8.4",
-    "css-loader": "^3.6.0",
-    "html-loader": "^1.1.0",
-    "html-webpack-plugin": "^4.3.0",
-    "mini-css-extract-plugin": "^0.9.0",
-    "postcss-loader": "^3.0.0",
-    "style-loader": "^1.2.1",
-    "webpack-dev-server": "^3.11.0"
+    "autoprefixer": "^10.4.8",
+    "css-loader": "^6.7.1",
+    "html-loader": "^4.1.0",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.6.1",
+    "postcss": "^8.4.16",
+    "postcss-loader": "^7.0.1",
+    "style-loader": "^3.3.1",
+    "webpack-dev-server": "^4.10.0"
   },
   "dependencies": {
     "@dragon-ball/goku": "^0.0.4-alpha.0",
-    "bulma": "^0.9.0",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
+    "bulma": "^0.9.4",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-router-dom": "^6.0.0"
   },
   "gitHead": "7d4ee10185c166d4cdd3717cf5b813c1f3967263"
