--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react-dom": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
+    "autoprefixer": "^10.4.8",
     "commitlint": "^17.0.3",
     "conventional-changelog": "^3.1.25",
     "conventional-changelog-cli": "^2.2.2",
@@ -44,6 +45,8 @@
     "husky": "^8.0.1",
     "lerna": "^5.4.0",
     "lint-staged": "^13.0.3",
+    "postcss": "^8.4.16",
+    "postcss-loader": "^7.0.1",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
