--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "@storybook/manager-webpack5": "^6.5.10",
     "@storybook/react": "^6.5.10",
     "@storybook/testing-library": "^0.0.13",
-    "@types/classnames": "^2.2.10",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
@@ -34,6 +33,7 @@
     "commitlint": "^17.0.3",
     "conventional-changelog": "^3.1.25",
     "conventional-changelog-cli": "^2.2.2",
+    "css-loader": "^6.7.1",
     "cz-lerna-changelog": "^2.0.3",
     "doctoc": "^2.2.0",
     "eslint": "^8.21.0",
@@ -45,11 +45,14 @@
     "husky": "^8.0.1",
     "lerna": "^5.4.0",
     "lint-staged": "^13.0.3",
+    "node-sass": "^7.0.1",
     "postcss": "^8.4.16",
     "postcss-loader": "^7.0.1",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sass-loader": "^13.0.2",
+    "style-loader": "^3.3.1",
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.2",
     "webpack": "^5.74.0",
@@ -82,6 +85,5 @@
   "bugs": {
     "url": "https://github.com/dragon-ball-p/dragon-ball/issues"
   },
-  "homepage": "https://github.com/dragon-ball-p/dragon-ball#readme",
-  "dependencies": {}
+  "homepage": "https://github.com/dragon-ball-p/dragon-ball#readme"
 }
