chore: 配置 husky
解决 husky 升级到 v8 不生效的问题

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "packages/*"
   ],
   "scripts": {
+    "postinstall": "husky install",
     "changelog": "conventional-changelog -p angular -i ChangeLog.md -s -r 0",
     "lint": "yarn lint:chichi && yarn lint:goku",
     "lint:chichi": "eslint packages/chichi/src --ext .tsx,.ts",
