--- a/package.json
+++ b/package.json
@@ -74,8 +74,7 @@
   },
   "lint-staged": {
     "README.md": [
-      "doctoc --notitle",
-      "git add"
+      "doctoc --notitle"
     ]
   },
   "description": "<!-- START doctoc generated TOC please keep comment here to allow auto update --> <!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->",
