--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "yarn lint:chichi && yarn lint:goku",
     "lint:chichi": "eslint packages/chichi/src --ext .tsx,.ts",
     "lint:goku": "eslint packages/goku/src --ext .tsx,.ts",
+    "stylelint:chichi": "stylelint packages/chichi/src/**/*.{scss,css}",
+    "stylelint:goku": "stylelint packages/goku/src/**/*.{scss,css}",
     "commit": "git-cz",
     "build": "lerna run --stream --sort build",
     "storybook": "start-storybook -p 6006",
@@ -54,6 +56,8 @@
     "react-dom": "^18.2.0",
     "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
+    "stylelint": "^14.10.0",
+    "stylelint-config-standard-scss": "^5.0.0",
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.2",
     "webpack": "^5.74.0",
@@ -66,6 +70,12 @@
     }
   },
   "lint-staged": {
+    "*.{js,ts,tsx}": [
+      "eslint --ext js,ts,tsx --fix"
+    ],
+    "*.{css,scss}": [
+      "stylelint --fix"
+    ],
     "README.md": [
       "doctoc --notitle"
     ]
