style: 使用 stylelint 检查  CSS, SCSS 语法
affects: @dragon-ball/goku

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,3 +1,8 @@
 {
-  "extends": ["stylelint-config-standard-scss"]
+  "extends": ["stylelint-config-standard-scss", "stylelint-config-prettier"],
+  "rules": {
+    "color-function-notation": "legacy",
+    "no-empty-source": null,
+    "declaration-block-no-redundant-longhand-properties": null
+  }
 }
