--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
     "stylelint": "^14.10.0",
+    "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard-scss": "^5.0.0",
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.2",
