--- a/packages/goku/package.json
+++ b/packages/goku/package.json
@@ -51,6 +51,7 @@
   },
   "dependencies": {
     "classnames": "^2.3.1",
+    "date-fns": "^2.29.2",
     "omit.js": "^2.0.2",
     "utility-types": "^3.10.0"
   },
